<resources>
    <string name="app_name_eng">DoEatDoEat</string>
    <string name="app_name_kor">두잇두잇</string>
    <string name="facebook_app_id">1865882396965465</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back">&lt;&lt;back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions</string>
    <string name="label_connect_sns">Or you can connect with</string>
    <string name="top_label_home">Home</string>
    <string name="top_label_sns">SNS</string>
    <string name="top_label_category">Category</string>
    <string name="top_label_rice">Rice</string>
    <string name="top_label_meat">Meat</string>
    <string name="top_label_noodle">Noodle</string>
    <string name="top_label_soup">Soup</string>
    <string name="top_label_flourfood">FlourFood</string>
    <string name="top_label_drink">Drink</string>
    <string name="top_label_convenient">Convenient</string>
    <string name="top_label_seafood">SeaFood</string>
    <string name="top_label_dessert">Dessert</string>
    <string name="top_label_Like">Like</string>
    <string name="top_label_profile">Profile</string>
    <string name="top_label_profile_change">Change</string>
    <string name="copyright">COPYRIGHT\u00a92016 DOEAT ALL RIGHTS RESERVED.</string>
    <string name="server_client_id">338794080483-9o7pq5b0t0lci9m3634ruacga8e3u24i.apps.googleusercontent.com</string>
    <string name="about_us">About us</string>
    <string name="about_us_app">‘밥 위에 놓인 나물과 양념장을 비벼서 먹는다.’한국인들에겐 당연한 비빔밥의 식사법이다. 하지만 세계적으로 알려진 비빔밥의 인지도에 비해 제대로 된 식사법을 몰라 잘못된 방식으로 먹는 외국인들이 많다. ‘끓는 물에 면을 넣고 면이 익으면 물을 따라 버리고 스프를 섞는다.’짜장라면의 제조법도 마찬가지이다. 한글로만 기재된 제조법에 많은 외국인들이 만드는 데 어려움을 겪는다. 이에 레토르트 식품부터 외식음식까지 다양한 스펙트럼의 한국 식품의 제조법 및 식사법을 외국인들에게 알려주고자 앱을 고안했다.
 최근 서울을 방문하는 젊은 외국인 관광객이 증가하는 추세이다. 이들이 서울에서현지인들이 즐겨 먹는 곳에서 한국 음식을 제대로 맛볼 수 있도록 서울의 유명 음식점과 위치를 함께 첨부하였다. 또 이들이 외국인이라는 이유로 식당에서 부당한 대우를 받지 않도록 서울의 착한 음식점으로 지정된 곳 위주로 선정하였다. 이 앱을 통해 외국인이 올바른 방법으로 한국 음식을 즐길 수 있기를 바라며, 한국음식에 대한 관심과 애정이 늘어나길 기대한다. 또 외국인이 서울의 합리적인 식당에서 식사를 함으로써 좋은 추억도 쌓고 서울에 대해 긍정적인 인식을 갖게 되길 바란다.</string>
    <string name="about_us_kh_name">김건희</string>
    <string name="about_us_kh_email">kimkh6554@gmail.com</string>
    <string name="about_us_kh_univ">인하대학교 컴퓨터정보공학과</string>
    <string name="about_us_js_name">김재승</string>
    <string name="about_us_js_email">pub60@hanmail.net</string>
    <string name="about_us_js_univ">인하대학교 컴퓨터정보공학과</string>
    <string name="about_us_hw_name">김희원</string>
    <string name="about_us_hw_email">heewkim92@gmail.com</string>
    <string name="about_us_hw_univ">Univ of Iowa Information System</string>
    <string name="about_us_kr_name">김규리</string>
    <string name="about_us_kr_email">kimkr357@gmail.com</string>
    <string name="about_us_kr_univ">Univ of Iowa Business Analytics</string>
    <string name="about_us_hs_name">신혜수</string>
    <string name="about_us_hs_email">shinhesoo@naver.com</string>
    <string name="about_us_hs_univ">덕성여자대학교 정보통계학과</string>
    <string-array name="language">
        <item>Korean</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Japanese</item>
    </string-array>
    <string name="bibimbap">밥에 나물, 고기, 달걀을 올려 고추장(매운 양념)에 비벼먹는 한국의 전통음식</string>
    <string name="sungnung">밥솥 바닥에 열이 많이 가해져 눌러 붙은 밥(‘누룽지’라고 한다.)에 물을 붓고 끓여 만든 음식</string>
    <string name="squidrice">살짝 데친 오징어에 매운 양념과 콩나물, 야채 등을 넣고 볶아서 밥과 함께 먹는 음식</string>
    <string name="nangmyun">메밀가루로 만든 얇은 면에 차가운 육수를 부어 먹는 한국의 전통음식</string>
    <string name="zzazangmyun">야채와 고기를 춘장으로 볶은소스를 면에 부어 비벼 먹는 음식</string>
    <string name="zzambbong">여러가지 채소와 해산물을 볶아 육수를 부어 만든 국물에 면을 넣어 먹는 음식</string>
    <string name="lamyun">기름에 미리 튀긴 국수를 스프와 함께 끓는 물에 넣어서 요리하는 레토르트 식품</string>
    <string name="hotbbokemmyun">기름에 미리 튀긴 국수를 끓는 물에 익힌 후 소스에 비벼먹는 레토르트 음식</string>
    <string name="sundaegook">소의 다리뼈(사골)를 넣고 오랜 시간 푹 고아 만든 육수에 순대를 넣어 요리한 국물로 밥과 함께 먹는음식</string>
    <string name="gamzatang">돼지 등뼈로 육수를 낸 후 각종 야채를 넣고 매운 양념과 후추로 간을 한 한국의 대표적인 음식</string>
    <string name="mandugook">고기와 기타 재료를 넣은 만두를 쇠고기 국물에 넣고 끓인 음식</string>
    <string name="budaezzigae">뜨거운 육수에 라면, 햄, 떡, 야채를 넣고 매운 양념과 함께 끓인 음식</string>
    <string name="gopchang">곱창(돼지나 소의 창자)을 각종 야채와 매운 소스를 철판 위에서 볶아 먹는 음식</string>
    <string name="dakgalbi">토막낸 닭을 매운 양념에 재웠다가 고구마, 양배추, 양파, 떡 등의 재료와 함께 철판에 볶아 먹는 음식</string>
    <string name="galbizzim">소의 갈비(늑골 부위)에 간장 소스로 양념한 후 감자, 당근 등의 야채와 함께 쪄서 조리한 한국의 전통음식</string>
    <string name="samgyaetang">손질한 닭의 배 안에 찹쌀, 인삼, 대추 등을 넣고 실로 꿰매어 냄비에 푹 익힌 여름철 한국의 보양식</string>
    <string name="yukhwae">익히지 않은 소고기를 얇게 썰어서 양념이나 얇게 썬 배를 곁들여 먹는 음식</string>
    <string name="dakbal">닭발을 매운 양념으로 조리한 음식</string>
    <string name="samgyupsal">삼겹살입니다</string>
    <string name="tangsuyuk">튀긴 돼지고기에 탕수 소스를 곁들여 먹는 음식</string>
    <string name="sannakji">살아 있는 낙지를 먹기 좋게 자르거나 젓가락에 감아 소금과 참기름을 섞은 양념에 찍어 먹는 음식</string>
    <string name="zzuggumi">주꾸미(문어의 일종)를 양파, 파 등 각종 채소와 함께 매운 양념장에 볶아먹는 철판 음식</string>
    <string name="ganzanggezang">익히지 않은 게를 간장에 오랜 시간 숙성시킨 것으로 짭쪼름한 맛이 일품인 음식</string>
    <string name="somac">한국의 술인 소주와 맥주를 적절한 비율로 섞은 술</string>
    <string name="linggelzu">한국의 술인 소주와 매화수 병의 입구를 맞대어 서로 섞이도록 한 술</string>
    <string name="gozingamrae">한국의 술인 소주와 맥주, 콜라를 정해진 순서에 따라 제조한 술로 쓴맛과 단맛이 절묘하게 잘 어울리는 술</string>
    <string name="meronazu">소주와 사이다와 메로나 아이스크림을 섞어 달콤하면서도 톡쏘는 맛을 내는 술</string>
    <string name="makgulli">찹쌀•보리•밀가루 등을 전통적인 방식으로 발효시켜 제조한 한국의 전통 술</string>
    <string name="bingsu">얼음 혹은 우유얼음을 잘게 갈아서 그 위에 얹은 팥이나 과일과 함께 섞어 먹는 디저트</string>
    <string name="misutgaru">현미, 보리, 콩, 율무, 찹쌀 등 여러 가지 몸에 좋은 곡물 가루를 우유나 물에 타먹는 음료</string>
    <string name="icehongsi">홍시(잘 익은 감을 일컫는다)를 얼려 샤베트처럼 퍼먹는 디저트</string>
    <string name="sikhae">쌀밥을 엿기름에 삭혀서 만든 음료로 특유의 단맛이 일품인 한국의 전통음료 </string>
    <string name="ddukbbokgi">쌀 혹은 밀가루로 만든 떡에 오뎅과 파를 넣고 고추장이나 간장 소스로 양념을 한 음식</string>
    <string name="sundae">돼지 곱창에 당면을 담고 선지로 맛과 색깔을 내어 수증기에 쪄낸 음식으로 떡볶이와 잘 어울린다.</string>
    <string name="fry">떡볶이, 순대와 함께 길거리에서 많이 판매하는 음식으로 각종 야채, 해산물을 밀가루를 묻혀 기름에 튀긴 음식</string>
    <string name="gimbap">식초로 간을 한 밥에 시금치, 오이, 당근 등의 야채와 햄을 넣고 김으로 만 음식</string>
    <string name="cupramyun">편의점에서 판매되는 일회용 용기에 담겨있는 라면</string>
    <string name="cupbbokemmyun">편의점에서 판매되는 일회용 용기에 담겨있는 볶음라면</string>
    <string name="ogamza">한국의 감자칩에 치즈를 뿌려 만든 음식</string>
    <string name="samgakgimbap">삼각형 모양의 주먹밥 속에 참지, 불고기 등 한가지 재료를 넣고 김으로 감싼 레토르트 식품</string>
    <string name="markjungsik">인스턴트 떡볶이에 스파게티, 후랑크소세지를 넣고 모짜렐라 치즈를 얹어 먹는 음식</string>
    <string name="cheesebuldakbap">매운 떡볶이에 밥과 스트링 치즈를 함께 넣어먹는 음식</string>
    <string name="apocato">아이스크림에 진한 에스프레소를 얹은 디저트</string>
    <string name="exp_bibimbap"> 비빔밥은 밥 위에 갖가지 나물과 고기볶음, 달걀 등을 올려 비벼 먹는
        음식으로 한국인과 외국인 모두 첫손으로 꼽는 한국의 대표음식이다. 비빔밥은 각
        지역마다 고유한 특징을 가지고 있지만, 그 중 특히 유명한 것이 전주비빔밥이다.\n\n
        \t①	비빔밥에 매운 정도를 조절해 가며 고추장을 넣는다.\n\n\t②	각종 야채와 밥, 고추장이 고루 섞이도록 비빈다.\n\n\t③	이때, 참기름을 함께 넣어 비비면 더 잘 비벼지며 비빔밥에 고소한 맛을 더한다.
    </string>
    <string name="exp_sungnumg">
         밥솥에 밥을 짓다 밥솥 바닥에 열이 많이 가해져 밥이 눌어 붙게 된다. 이렇게 눌어 붙은 밥을 누
        룽지라고 하는데 이 누룽지에 물을 붓고 끓여 만든 것을 숭늉이라고 한다. 숭늉은 구수한
        맛이 일품이며 짠맛이 많은 한국 음식을 먹은 후 이 숭늉을 먹으면 소금기 가득한 입안을 개운하게 해준다.
    </string>
    <string name="exp_squidrice">
         살짝 데친 오징어에 고추장과 양파, 마늘을 넣은 양념장을 더한 후 센 불에 볶은 것을
        카레와 같이 밥 위에 얹은 음식이다. 매운 맛이 강한 편이지만 중독성 있는 양념 때문에 계속 손이 가는
        음식이다. 또, 오징어 볶음에는 각종 야채를 함께 볶아 먹는데 산성 식품인 오징어와 알칼
        리성인 채소가 어우러지면서 비타민 A와 C를 보충할 수 있다.\n\t①	밥 위에 양념이 잘 벤 오징어를 얹어 함께 먹는다. 흰 밥이 매운 오징어의 맛을 조금이나마 중화시켜준다.
        \n\t②	오징어 덮밥과 함께 숭늉이나 계란찜 등을 곁들여 먹으면 매운 맛을 중화시켜 주고 고소함을 더한다.
    </string>
    <string name="exp_nangmyun">
         냉면은 메밀가루로 만든 국수에 차가운 육수를 부어 만든 한국의 전통 음식이다. 여름철 삼복더위를 이겨내기 위한 음식 중 하나로 한국인들 사이에서도 여름철 인기 메뉴이다. 육수가 있고 양념이 없는 냉면을 물냉면, 육수가 없고 양념이 있어 비벼먹는 냉면을 비빔냉면이라고 한다.\n◎물냉면\n\t①	물냉면이 나오면 기호에 따라 겨자, 식초를 넣는다.\n\t*겨자는 매콤함을 더하며 식초는 톡 쏘는 맛을 더한다.\n\t②	면이 길고 질기므로 가위로 잘라서 먹는다.\n◎비빔냉면\n\t①	물냉면과 마찬가지로 겨자와 식초를 원하는 만큼 넣는다.\n\t②	양념과 면이 잘 섞이도록 골고루 비빈다. \n\t③	면이 길고 질기므로 잘라서 먹는다.
    </string>
    <string name="exp_zzazangmyun">
         짜장면은 한국의 대중적인 음식으로 주로 중국음식점 에서 찾을수 있다. 한국에 정착한 화교들이 한국인의 입맛에 맞게 한국화한 음식으로 야채와 고기를 춘장으로 볶은소스를 면에 부어 비벼 먹는 음식이다. 소스에 종류에 따라 간짜장, 삼선짜장, 유니짜장 등 여러종류의 자장면이 있다.\n\t①	면과 자장소스를 비벼준다 \n\t②	기호에따라 식초나 고춧가루를 뿌려 먹기도한다.\n\t③	단무지와 양파와 함께 먹으면 더 맛있다.
    </string>
    <string name="exp_zzambbong">
         짬뽕은 한국의 자장면과 더불어 대중적인 중국음식점의 메뉴이다. 짬뽕은 여러가지 채소와 해산물을 볶아 육수를 부어 만든 국물에 면을 넣어 먹는 음식으로 일본의 나가사키 짬뽕과는 달리 한국의 짬뽕은 고추기름이 추가되어 매콤하고 얼큰한 빨간색이다.
    </string>
    <string name="exp_lamyun">
         라면은 기름에 미리 튀긴 국수를 스프와 함께 끓는 물에 넣어서 요리하는 레토르트 음식이다. 조리시간도 5~10분 정도로 짧고 조리방법도 간편하며, 편의점이나 슈퍼에서 쉽게 구입할 수 있어 한국인이 즐겨먹는 음식이기도 하다.\n\t①	비닐봉지를 뜯어 면, 분말스프, 건더기 스프를 꺼낸다.\n\t②	봉지에 표시된 양 만큼(보통 500ml) 물을 넣고 끓인다.\n\t③	물이 끓기 시작하면 분말스프와 면을 넣는다.\n\t④	기호에 따라 계란이나 파을 넣고, 3~5분 정도 더 끓인다.
    </string>
    <string name="exp_hotbbokemmyun">
         볶음라면은 기름에 미리 튀긴 국수를 끓는 물에 익힌 후 소스에 비벼먹는 레토르트 음식이다. 조리시간도 5~10분 정도로 짧고 조리방법도 간편하며, 편의점이나 슈퍼에서 쉽게 구입할 수 있어 한국인이 즐겨먹는 음식이기도 하다.\n\t①	봉지에 표시된 양 만큼(보통 500ml) 물을 넣고 끓인다.\n\t②	물이 끓기 시작하면 면을 넣는다.\n\t③	면이 다 익으면 물을 약 2~3숟갈 정도만 남기고 버린다.\n\t④	양념소스를 넣고 면과 함께 비벼 먹는다.
    </string>
    <string name="exp_sundaegook">
         소의 다리뼈(사골)를 넣고 오랜 시간 푹 고아 만든 육수에 순대를 넣어 요리한 국물 음식이다. 소의 뼈를 오랜 시간 끓였기 때문에 단백질이 풍부해 병의 회복에 도움이 되고 면역력을 길러준다. 또 순댓국은 조선시대부터 선조들이 추위를 이길 수 있도록 해준 전통 음식 중 하나이기도 하며 과음한 다음날 해장음식으로 즐겨 먹기도 한다.\n\t①	순댓국이 나오면 배치된 소금과 후추를 적당량 뿌려가며 국물의 간을 맞춘다. \n\t②	밥을 국에 말아 골고루 섞는다.\n\t③	김치나 깍두기를 얹어 함께 먹는다.
    </string>
    <string name="exp_gamzatang">
         돼지 등뼈를 충분히 끓인 다음 감자, 우거지, 들깻가루, 깻잎, 마늘 등을 넣어 다시 얼큰하게 끓여낸 감자탕은 뼈마디 사이에 붙은 고기를 발라 먹는 재미가 쏠쏠한 음식이다. 감자탕을 테이블에서 즉석에서 끓여가며 고기를 발라 먹고 나서 남은 국물에 밥을 볶아 먹는 것도 별미이다.\n\t①	야채나 떡은 빨리 익는 편이므로 먼저 건져 먹는다. \n\t②	고기가 익으면 발라 먹으면 되는데 뼈가 두꺼워 먹기 힘들 때는 뼈의 틈을 갈라 분리하면 먹기 편하다. \n\t③	다 먹은 후 남은 국물에 밥을 볶아 먹기도 한다.
    </string>
    <string name="exp_mandugook">
         고기와 기타 재료를 넣은 만두를 쇠고기 국물에 넣고 끓인 음식이다. 추운 겨울철 가족들과 둘러 앉아 만두를 빚고 만둣국을 만들어 먹으며 한파 속에서 몸을 녹이기도 한다. 만둣국은 만두와 국물을 함께 먹기도 하고, 만두를 따로 건져서 간장에 찍어 먹기도 한다.\n\t①	만두 속이 뜨거우니 조심해야 한다.
    </string>
    <string name="exp_budaezzigae">
         부대찌개란 군대의 찌개라는 뜻으로 서구의 스튜처럼 진한 한국의 국물요리이다. 한국 전쟁 직후 음식이 부족하여 미국부대에서 쓰고 남은 햄과 소세지 등의 재료를 이용하요 끓여먹던 찌개가 오늘날까지 전해진 것이다. 오늘날에는 육수에 라면, 햄, 소세지, 떡, 야채를 넣고 매운 양념과 함께 끓이는 것이 일반적이며, 기호에 따라 당면이나 라면 사리를 추가해 먹기도 한다.\n\t①	육수와 부대찌개 재료를 큰 냄비에 끓인다. \n\t②	육수가 끓기 시작하면 추가한 당면이나 라면사리를 넣고 3~5분 정도 더 끓인다.\n\t③	면이 다 익으면 면과 야채, 떡을 먼저 먹으며, 이후 햄과 소세지가 다 익은 것 같으면 함께 먹는다.
    </string>
    <string name="exp_gopchang">
         곱창은 돼지나 소의 창자를 말한다. 보통 소곱창은 불판 위에 구워먹으며, 돼지곱창은 각종 야채와 함께 매운 양념에 볶아 먹는다. 곱창은 다른 살코기에 비해 철분과 비타민이 풍해서 몸이 허약한 사람이나 환자의 보신요리에 잘 이용한다. 또한, 몸의 독성해소, 피부미용, 노약자의 골다공증에도 효능이 있다고 한다.\n\t①	불판위에 곱창과 야채, 매운 양념을 넣고 볶는다.\n\t*보통 위의 과정이 다 조리된 상태로 나온다. 음식이 나오면 불판 위에서 2~3분 정도 더 익힌 후 먹으면 된다.\n\t②	매운 맛을 중화시키기 위해 깻잎에 싸먹기도 한다. \n\t③	다 먹은 후에는 남은 양념에 밥을 볶아서 먹는다.
    </string>
    <string name="exp_dakgalbi">
         닭갈비는 한국의 대표적인 볶음 요리로, 고추장 양념에 재워둔 닭갈비와 양배추, 고구마, 파, 떡 등과 함께 철판에 볶아 먹는 요리이다. 닭과 야채를 섞은 닭갈비는 한국인의 입맛에 맞는 건강식품이라고 할 수 있다.\n\t①	모든 재료를 넣고 양념이 잘 베도록 볶는다\n\t②	빨리 익는 편인 야채와 떡을 먼저 먹고 그 후에 고기가 익으면 함께 먹는다.\n\t③	남은 양념, 고기에 밥을 넣어 볶아 먹기도 한다.
    </string>
</resources>