<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@mipmap/doeat_logo1"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:drawableLeft="@mipmap/user_icon_64"
                android:drawablePadding="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:drawableLeft="@mipmap/password_icon_64"
                android:drawablePadding="10dp"
                />
        </android.support.design.widget.TextInputLayout>


        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/darker_red"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.JUA"
            />

        <LinearLayout
            android:id="@+id/sns_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_connect_sns"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:textSize="15dp"
                android:textAppearance="@style/TextAppearance.JUA"
                android:id="@+id/textView2" />

            <Button
                android:id="@+id/btnFacebookLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/facebook_icon_rec" />

            <Button
                android:id="@+id/btnGoogleLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/google_icon_rec" />
        </LinearLayout>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_link_to_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textAppearance="@style/TextAppearance.JUA" />

        <!-- Link to Sign up Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textAppearance="@style/TextAppearance.JUA" />

    </LinearLayout>

</LinearLayout>